# termscp

./: .gitignore  .markdownlint-cli2.jsonc  .travis.yml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.rs  cliff.toml  codecov.yml  install.ps1  install.sh  tailwind.config.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  copy.md  feature_request.md  question.md  security.md
.github/actions-rs/: grcov.yml
.github/workflows/: aur-pub.yml  build-artifacts.yml  build.yml  ci.yml  codeberg-mirror.yml  coverage.yml  freebsd.yml  install.yml  linux.yml  macos.yml  pages.yml  release.yml  site.yml  stale.yml  website.yml  windows.yml
docs/: CNAME  deploy.md  developer.md  man-en.md  man-zh.md  man.md
docs/de/: README.md  man.md
docs/drawio/: UI.drawio  bl.drawio  component_lifecycle.drawio
docs/en-US/: SUMMARY.md  book.toml  index.md  lang-switcher.js
docs/en-US/cli/: cli.md
docs/en-US/configuration/: configuration.md  explorer-format.md  logging.md  notifications.md  password-security.md  ssh-keys.md  themes.md
docs/en-US/developer/: developer.md
docs/en-US/getting-started/: connecting.md  connection-parameters.md  installation.md
docs/en-US/usage/: bookmarks.md  file-explorer.md  file-watcher.md  keyboard-shortcuts.md  multiple-files.md  open-edit-files.md  synced-browsing.md
docs/es/: README.md  man.md
docs/fr/: README.md  man.md
docs/it/: README.md  man.md
docs/misc/: README.deb.txt
docs/plans/: 2026-02-27-filetransfer-activity-refactor-design.md  2026-02-27-filetransfer-activity-refactor.md
docs/pt-BR/: README.md  man.md
docs/ptbr/: README.md  man.md
docs/zh-CN/: README.md  SUMMARY.md  book.toml  index.md  man.md
docs/zh-CN/cli/: cli.md
docs/zh-CN/configuration/: configuration.md  explorer-format.md  logging.md  notifications.md  password-security.md  ssh-keys.md  themes.md
docs/zh-CN/developer/: developer.md
docs/zh-CN/getting-started/: connecting.md  connection-parameters.md  installation.md
docs/zh-CN/theme/: head.hbs
docs/zh-CN/usage/: bookmarks.md  file-explorer.md  file-watcher.md  keyboard-shortcuts.md  multiple-files.md  open-edit-files.md  synced-browsing.md
site/: .gitignore  .prettierignore  .prettierrc.json  astro.config.mjs  changelog.html  get-started.html  index.html  input.css  output.css  package-lock.json  package.json  sitemap.xml  tsconfig.json  updates.html  user-manual.html  vercel.json  vitest.config.ts
site/css/: get-started.css  intro.css  main.css  markdown.css  menu.css  updates.css
site/html/: get-started.html  home.html  intro.html  updates.html
site/html/components/: footer.html  menu.html
site/js/: core.js  events.js  lang.min.js  resolvers.js
site/lang/: en.json  es.json  fr.json  it.json  zh-CN.json
site/public/: install.sh  robots.txt
site/scripts/: copy-install.mjs  fetch-man.mjs  fetch-man.test.ts
site/src/: analytics.ts  consts.ts
site/src/components/: CopyButton.astro  ExplorerHero.astro  FeatureCard.astro  Footer.astro  InstallTabs.astro  LangPicker.astro  Nav.astro  ProtocolStrip.astro  ThemeToggle.astro
site/src/i18n/: en.json  es.json  fr.json  it.json  ui.test.ts  ui.ts  zh-CN.json
site/src/layouts/: Base.astro
site/src/pages/: index.astro  install.astro
site/src/styles/: theme.css
src/: activity_manager.rs  cli.rs  cli_opts.rs  explorer.rs  host.rs  lib.rs  main.rs  support.rs  system.rs  ui.rs  utils.rs
src/bookmarks/: mod.rs  serializer.rs
src/cli/: remote.rs
src/config/: bookmarks.rs  key_bindings.rs  mod.rs  params.rs  serialization.rs  serializer.rs  themes.rs
src/config/bookmarks/: aws_s3.rs  kube.rs  smb.rs
src/explorer/: builder.rs  formatter.rs  mod.rs
src/filetransfer/: builder.rs  ftp_transfer.rs  host_bridge_builder.rs  mod.rs  params.rs  remotefs_builder.rs  scp_time_fix.rs  scp_transfer.rs  sftp_transfer.rs
src/filetransfer/params/: aws_s3.rs  kube.rs  smb.rs  webdav.rs
src/filetransfer/transfer/: ftp.rs  mod.rs  scp.rs  sftp.rs
src/filetransfer/transfer/s3/: mod.rs  object.rs
src/fs/: mod.rs
src/fs/explorer/: builder.rs  formatter.rs  mod.rs
src/host/: bridge.rs  localhost.rs  mod.rs  remote_bridged.rs
src/host/remote_bridged/: temp_mapped_file.rs
src/support/: import_ssh_hosts.rs
src/system/: auto_update.rs  bookmarks_client.rs  config_client.rs  environment.rs  key_bindings_client.rs  keys.rs  logging.rs  mod.rs  notifications.rs  sshkey_storage.rs  theme_provider.rs  watcher.rs
src/system/keys/: filestorage.rs  keyringstorage.rs  mod.rs
src/system/watcher/: change.rs  mod.rs
src/ui/: context.rs  input.rs  keymap.rs  mod.rs  store.rs
src/ui/activities/: auth.rs  auth_activity.rs  filetransfer.rs  filetransfer_activity.rs  keymap.rs  mod.rs  setup.rs
src/ui/activities/auth/: bookmarks.rs  components.rs  misc.rs  mod.rs  update.rs  view.rs
src/ui/activities/auth_activity/: bookmarks.rs  callbacks.rs  input.rs  layout.rs  mod.rs  update.rs  view.rs
src/ui/activities/filetransfer/: actions.rs  browser.rs  components.rs  fswatcher.rs  misc.rs  mod.rs  session.rs  update.rs  view.rs
src/ui/activities/filetransfer_activity/: actions.rs  callbacks.rs  explorer.rs  input.rs  layout.rs  misc.rs  mod.rs  session.rs  update.rs  view.rs
src/ui/activities/setup/: actions.rs  components.rs  config.rs  mod.rs  update.rs  view.rs
src/ui/components/: bookmark_list.rs  bytes.rs  color_picker.rs  file_list.rs  logbox.rs  mod.rs  msgbox.rs
src/ui/layout/: mod.rs  props.rs  utils.rs  view.rs
src/ui/layout/components/: ctext.rs  (+11 more)
src/utils/: crypto.rs  file.rs  fmt.rs  git.rs  hash.rs  mod.rs  parser.rs  path.rs  random.rs  ssh.rs  string.rs  test_helpers.rs  tty.rs  ui.rs
src/utils/parser/: credentials.rs  ports.rs  protocol.rs  remote.rs
tests/: docker-compose.yml  test.sh
themes/: catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-moka.toml  default.toml  earth-wind-fire.toml  horizon.toml  mono-bright.toml  mono-dark.toml  sugarplum.toml  ubuntu.toml  veeso.toml
(+110 files in other folders)
