[package]
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
categories = ["command-line-utilities"]
description = "termscp is a feature rich terminal file transfer and explorer with support for SCP/SFTP/FTP/Kube/S3/WebDAV"
edition = "2021"
homepage = "https://termscp.veeso.dev"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = ["terminal", "ftp", "scp", "sftp", "tui"]
license = "MIT"
name = "termscp"
readme = "README.md"
repository = "https://github.com/veeso/termscp"
version = "0.15.0"

[package.metadata.rpm]
package = "termscp"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
termscp = { path = "/usr/bin/termscp" }

[package.metadata.deb]
maintainer = "Christian Visintin <christian.visintin@veeso.dev>"
copyright = "2022, Christian Visintin <christian.visintin@veeso.dev>"
extended-description-file = "docs/misc/README.deb.txt"

[[bin]]
name = "termscp"
path = "src/main.rs"

[dependencies]
argh = "^0.1"
bitflags = "^2"
bytesize = "^1"
chrono = "^0.4"
content_inspector = "^0.2"
dirs = "^5.0"
edit = "^0.1"
filetime = "^0.2"
hostname = "^0.4"
keyring = { version = "^3", optional = true, features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
lazy-regex = "^3"
lazy_static = "^1"
log = "^0.4"
magic-crypt = "^3"
notify = "6"
notify-rust = { version = "^4.5", default-features = false, features = ["d"] }
nucleo = "0.5"
open = "^5.0"
rand = "^0.8.5"
regex = "^1"
remotefs = "^0.3"
remotefs-aws-s3 = { version = "^0.3", default-features = false, features = [
  "find",
  "rustls",
] }
remotefs-kube = "0.4"
remotefs-webdav = "^0.2"
rpassword = "^7"
self_update = { version = "^0.41", default-features = false, features = [
  "rustls",
  "archive-tar",
  "archive-zip",
  "compression-flate2",
  "compression-zip-deflate",
] }
serde = { version = "^1", features = ["derive"] }
simplelog = "^0.12"
ssh2-config = "^0.2"
tempfile = "^3"
thiserror = "^1"
tokio = { version = "=1.38.1", features = ["rt"] }
toml = "^0.8"
tui-realm-stdlib = "^1.3"
tuirealm = "^1.9"
unicode-width = "^0.2"
version-compare = "^0.2"
whoami = "^1.5"
wildmatch = "^2"

[dev-dependencies]
pretty_assertions = "^1"
serial_test = "^3"

[build-dependencies]
cfg_aliases = "0.2"

[features]
default = ["smb", "with-keyring"]
github-actions = []
with-keyring = ["keyring"]
smb = ["remotefs-smb"]

[target."cfg(not(target_os = \"macos\"))".dependencies]
remotefs-smb = { version = "^0.3", optional = true }

[target."cfg(target_family = \"windows\")"]
[target."cfg(target_family = \"windows\")".dependencies]
remotefs-ftp = { version = "^0.2", features = ["native-tls"] }
remotefs-ssh = "^0.4"

[target."cfg(target_family = \"unix\")"]
[target."cfg(target_family = \"unix\")".dependencies]
remotefs-ftp = { version = "^0.2", features = ["vendored", "native-tls"] }
remotefs-ssh = { version = "^0.4", features = ["ssh2-vendored"] }
users = "0.11.0"

[profile.dev]
incremental = true

[profile.release]
strip = true
